@@ -188,7 +188,7 @@ COPYRIGHT
 	Gustavo Hime (hime@users.sourceforge.net)
 	Talbot Hughes
 	Robert Kesterson (robertk@users.sourceforge.net)
-	Matthias Melcher (matthias@users.sourceforge.net)
+	Matthias Melcher (matthiaswm@users.sourceforge.net)
 	James Dean Palmer (jamespalmer@users.sourceforge.net)
 	Vincent Penne (vincentp@users.sourceforge.net)
         Michael Sweet (easysw@users.sourceforge.net)
