@@ -1,4 +1,4 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0103
+// generated by Fast Light User Interface Designer (fluid) version 1.0104
 
 #include "function_panel.h"
 #include <FL/Fl_Pixmap.H>
@@ -334,23 +334,23 @@ Fl_Double_Window* make_widgetbin() {
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Window"));
         o->image(pixmap[1]);
       }
-      { Fl_Button* o = new Fl_Button(56, 28, 24, 24);
-        o->tooltip("Tabs");
-        o->box(FL_THIN_UP_BOX);
-        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Tabs"));
-        o->image(pixmap[13]);
-      }
-      { Fl_Button* o = new Fl_Button(56, 52, 24, 24);
-        o->tooltip("Tile");
-        o->box(FL_THIN_UP_BOX);
-        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Tile"));
-        o->image(pixmap[20]);
-      }
       { Fl_Button* o = new Fl_Button(80, 4, 24, 24);
         o->tooltip("Group");
         o->box(FL_THIN_UP_BOX);
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Group"));
         o->image(pixmap[6]);
+      }
+      { Fl_Button* o = new Fl_Button(104, 4, 24, 24);
+        o->tooltip("Pack");
+        o->box(FL_THIN_UP_BOX);
+        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Pack"));
+        o->image(pixmap[22]);
+      }
+      { Fl_Button* o = new Fl_Button(56, 28, 24, 24);
+        o->tooltip("Tabs");
+        o->box(FL_THIN_UP_BOX);
+        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Tabs"));
+        o->image(pixmap[13]);
       }
       { Fl_Button* o = new Fl_Button(80, 28, 24, 24);
         o->tooltip("Scroll");
@@ -358,17 +358,17 @@ Fl_Double_Window* make_widgetbin() {
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Scroll"));
         o->image(pixmap[19]);
       }
+      { Fl_Button* o = new Fl_Button(56, 52, 24, 24);
+        o->tooltip("Tile");
+        o->box(FL_THIN_UP_BOX);
+        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Tile"));
+        o->image(pixmap[20]);
+      }
       { Fl_Button* o = new Fl_Button(80, 52, 24, 24);
         o->tooltip("Wizard");
         o->box(FL_THIN_UP_BOX);
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Wizard"));
         o->image(pixmap[21]);
-      }
-      { Fl_Button* o = new Fl_Button(104, 4, 24, 24);
-        o->tooltip("Pack");
-        o->box(FL_THIN_UP_BOX);
-        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Pack"));
-        o->image(pixmap[22]);
       }
       o->end();
     }
@@ -426,6 +426,12 @@ Fl_Double_Window* make_widgetbin() {
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Scrollbar"));
         o->image(pixmap[38]);
       }
+      { Fl_Button* o = new Fl_Button(232, 4, 24, 24);
+        o->tooltip("Value Slider");
+        o->box(FL_THIN_UP_BOX);
+        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Value_Slider"));
+        o->image(pixmap[39]);
+      }
       { Fl_Button* o = new Fl_Button(184, 28, 24, 24);
         o->tooltip("Adjuster");
         o->box(FL_THIN_UP_BOX);
@@ -438,6 +444,12 @@ Fl_Double_Window* make_widgetbin() {
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Counter"));
         o->image(pixmap[41]);
       }
+      { Fl_Button* o = new Fl_Button(232, 28, 24, 24);
+        o->tooltip("Dial");
+        o->box(FL_THIN_UP_BOX);
+        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Dial"));
+        o->image(pixmap[42]);
+      }
       { Fl_Button* o = new Fl_Button(184, 52, 24, 24);
         o->tooltip("Roller");
         o->box(FL_THIN_UP_BOX);
@@ -449,18 +461,6 @@ Fl_Double_Window* make_widgetbin() {
         o->box(FL_THIN_UP_BOX);
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Value_Input"));
         o->image(pixmap[44]);
-      }
-      { Fl_Button* o = new Fl_Button(232, 4, 24, 24);
-        o->tooltip("Value Slider");
-        o->box(FL_THIN_UP_BOX);
-        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Value_Slider"));
-        o->image(pixmap[39]);
-      }
-      { Fl_Button* o = new Fl_Button(232, 28, 24, 24);
-        o->tooltip("Dial");
-        o->box(FL_THIN_UP_BOX);
-        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Dial"));
-        o->image(pixmap[42]);
       }
       { Fl_Button* o = new Fl_Button(232, 52, 24, 24);
         o->tooltip("Value Output");
@@ -478,29 +478,29 @@ Fl_Double_Window* make_widgetbin() {
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Input"));
         o->image(pixmap[14]);
       }
-      { Fl_Button* o = new Fl_Button(260, 28, 24, 24);
-        o->tooltip("Text Edit");
-        o->box(FL_THIN_UP_BOX);
-        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Text_Editor"));
-        o->image(pixmap[29]);
-      }
-      { Fl_Button* o = new Fl_Button(260, 52, 24, 24);
-        o->tooltip("File Input");
-        o->box(FL_THIN_UP_BOX);
-        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_File_Input"));
-        o->image(pixmap[30]);
-      }
       { Fl_Button* o = new Fl_Button(284, 4, 24, 24);
         o->tooltip("Output");
         o->box(FL_THIN_UP_BOX);
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Output"));
         o->image(pixmap[27]);
       }
+      { Fl_Button* o = new Fl_Button(260, 28, 24, 24);
+        o->tooltip("Text Edit");
+        o->box(FL_THIN_UP_BOX);
+        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Text_Editor"));
+        o->image(pixmap[29]);
+      }
       { Fl_Button* o = new Fl_Button(284, 28, 24, 24);
         o->tooltip("Text Display");
         o->box(FL_THIN_UP_BOX);
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Text_Display"));
         o->image(pixmap[28]);
+      }
+      { Fl_Button* o = new Fl_Button(260, 52, 24, 24);
+        o->tooltip("File Input");
+        o->box(FL_THIN_UP_BOX);
+        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_File_Input"));
+        o->image(pixmap[30]);
       }
       o->end();
     }
@@ -512,29 +512,29 @@ Fl_Double_Window* make_widgetbin() {
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Menu_Bar"));
         o->image(pixmap[17]);
       }
-      { Fl_Button* o = new Fl_Button(312, 28, 24, 24);
-        o->tooltip("Menu Button");
-        o->box(FL_THIN_UP_BOX);
-        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Menu_Button"));
-        o->image(pixmap[26]);
-      }
-      { Fl_Button* o = new Fl_Button(312, 52, 24, 24);
-        o->tooltip("Choice");
-        o->box(FL_THIN_UP_BOX);
-        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Choice"));
-        o->image(pixmap[15]);
-      }
       { Fl_Button* o = new Fl_Button(336, 4, 24, 24);
         o->tooltip("Menu Item");
         o->box(FL_THIN_UP_BOX);
         o->callback((Fl_Callback*)type_make_cb, (void*)("menuitem"));
         o->image(pixmap[16]);
       }
+      { Fl_Button* o = new Fl_Button(312, 28, 24, 24);
+        o->tooltip("Menu Button");
+        o->box(FL_THIN_UP_BOX);
+        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Menu_Button"));
+        o->image(pixmap[26]);
+      }
       { Fl_Button* o = new Fl_Button(336, 28, 24, 24);
         o->tooltip("Sub Menu");
         o->box(FL_THIN_UP_BOX);
         o->callback((Fl_Callback*)type_make_cb, (void*)("submenu"));
         o->image(pixmap[18]);
+      }
+      { Fl_Button* o = new Fl_Button(312, 52, 24, 24);
+        o->tooltip("Choice");
+        o->box(FL_THIN_UP_BOX);
+        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Choice"));
+        o->image(pixmap[15]);
       }
       o->end();
     }
@@ -568,6 +568,12 @@ Fl_Double_Window* make_widgetbin() {
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Box"));
         o->image(pixmap[5]);
       }
+      { Fl_Button* o = new Fl_Button(416, 4, 24, 24);
+        o->tooltip("Clock");
+        o->box(FL_THIN_UP_BOX);
+        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Clock"));
+        o->image(pixmap[34]);
+      }
       { Fl_Button* o = new Fl_Button(392, 28, 24, 24);
         o->tooltip("Help Browser");
         o->box(FL_THIN_UP_BOX);
@@ -579,12 +585,6 @@ Fl_Double_Window* make_widgetbin() {
         o->box(FL_THIN_UP_BOX);
         o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Progress"));
         o->image(pixmap[36]);
-      }
-      { Fl_Button* o = new Fl_Button(416, 4, 24, 24);
-        o->tooltip("Clock");
-        o->box(FL_THIN_UP_BOX);
-        o->callback((Fl_Callback*)type_make_cb, (void*)("Fl_Clock"));
-        o->image(pixmap[34]);
       }
       o->end();
     }
