@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_get_key.cxx,v 1.5.2.3.2.4 2003/01/30 21:43:04 easysw Exp $"
+// "$Id: Fl_get_key.cxx,v 1.5.2.3.2.5 2003/04/03 04:28:15 matthiaswm Exp $"
 //
 // Keyboard state routines for the Fast Light Tool Kit (FLTK).
 //
@@ -50,6 +50,7 @@ int Fl::event_key(int k) {
   else
 #  endif
     i = XKeysymToKeycode(fl_display, k);
+  if (i==0) return 0;
   return fl_key_vector[i/8] & (1 << (i%8));
 }
 
@@ -62,5 +63,5 @@ int Fl::get_key(int k) {
 #endif
 
 //
-// End of "$Id: Fl_get_key.cxx,v 1.5.2.3.2.4 2003/01/30 21:43:04 easysw Exp $".
+// End of "$Id: Fl_get_key.cxx,v 1.5.2.3.2.5 2003/04/03 04:28:15 matthiaswm Exp $".
 //
