@@ -1,5 +1,5 @@
 /*
- * "$Id: flstring.h,v 1.1.2.11 2003/01/30 21:44:26 easysw Exp $"
+ * "$Id: flstring.h,v 1.1.2.12 2003/04/03 04:28:15 matthiaswm Exp $"
  *
  * Common string header file for the Fast Light Tool Kit (FLTK).
  *
@@ -63,7 +63,7 @@ extern "C" {
  * when included - to be resolved...
  */
 
-#  if defined(__APPLE__) && defined(__MWERKS__)
+#  if defined(__APPLE__) && defined(__MWERKS__) && defined(_MSL_USING_MW_C_HEADERS)
 int strcasecmp(const char*,const char*);
 int strncasecmp(const char*,const char*,int);
 char *strdup(const char*);
@@ -101,5 +101,5 @@ FL_EXPORT extern size_t fl_strlcpy(char *, const char *, size_t);
 
 
 /*
- * End of "$Id: flstring.h,v 1.1.2.11 2003/01/30 21:44:26 easysw Exp $".
+ * End of "$Id: flstring.h,v 1.1.2.12 2003/04/03 04:28:15 matthiaswm Exp $".
  */
